api-gw/nginx/cmbc/f5-manage07/3.2.10/ingress-cart.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart
  namespace: f5-manage07
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: f5manage05.example.com
    http:
      paths:
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart-svc
            port:
              number: 80
